--- a/index.html
+++ b/index.html
@@ -36,8 +36,15 @@
 
 <div class="center">
 <h1>ABC Company</h1> 
-<input type="text" id="employeeid" placeholder="Employee ID" value=""><br><input type="submit" value="Clock In"><input type="submit" value="Clock Out">
-       </div> 
+
+<input type="text" id="employeeid" placeholder="Employee ID" value="">
+<br>
+<input type="text" id="hoursworked" value="">
+<br>
+<input type="submit" Value="Clock-in" onclick=startTime(); id='posting'>
+<input type="submit" value="Clock Out">
+
+      </div> 
         <script src="app.js"></script>
         
     </body>
